@@ -4,6 +4,8 @@ Changes in 0.61.2:
     quoting rules
   * The changemail commitaction module now takes an optional '--from'
     argument.
+  * added clearBuildReqs() - will clear all or some of superclass buildreqs
+    when cooking
 
 Changes in 0.61.1:
   * Cleaned up error message which results from Conary not being able to
